# learn

./: PROJECTS.md  README.md
.github/workflows/: caesars.yaml  caesars.yml  caesars_backend.yaml  caesars_backend.yml  caesars_dioxus.yaml  caesars_dioxus.yml  caesars_leptos.yml  caesars_qt.yml  caesars_svelte.yaml  caesars_svelte.yml  caesars_sveltekit.yml  caesars_vue.yaml  caesars_vue.yml  keywords.yml  learn_dsa.yml  learn_scrapy.yml  pokedex_svelte.yml  pokedex_svelte_release.yml  pokedex_sveltekit.yml  pokedex_sveltekit_release.yml  pokedex_vue.yml  quiz_sveltekit.yml  quiz_vue.yml  riddles_rust.yml
src/caesars/: CHANGELOG.md  Makefile  README.md  justfile
src/caesars/backend/: .example.env  Cargo.toml  Makefile  README.md  justfile
src/caesars/backend/src/: config.rs  logger.rs  routes.rs  schema.rs
src/caesars/backend/src/errors/: core.rs  mod.rs
src/caesars/backend/src/rot/: entities.rs
src/caesars/backend/src/rot/service/: decrypt.rs  encrypt.rs
src/caesars/backend/tests/: tests.rs
src/caesars/backend/tests/health/: tests.rs
src/caesars/backend/tests/rot/: graphql.rs  tests.rs
src/caesars/web/backend/: .dprint.jsonc  .example.env  Cargo.toml  justfile
src/caesars/web/backend/configs/: dprint.json
src/caesars/web/backend/src/: config.rs  context.rs  lib.rs  main.rs  routes.rs  schema.rs
src/caesars/web/backend/src/domain/: mod.rs
src/caesars/web/backend/src/domain/health/: entities.rs
src/caesars/web/backend/src/domain/rot/: entities.rs  resolver.rs
src/caesars/web/backend/src/domain/rot/model/: mod.rs
src/caesars/web/backend/src/domain/rot/service/: decrypt.rs  encrypt.rs
src/caesars/web/backend/src/errors/: mod.rs
src/caesars/web/backend/src/rot/: resolver.rs
src/caesars/web/backend/src/rot/model/: mod.rs
src/caesars/web/backend/src/rot/service/: decrypt.rs  encrypt.rs  mod.rs
src/caesars/web/backend/tests/: schema.graphql  tests.hurl
src/caesars/web/backend/tests/api-collection/: asserts.sh
src/caesars/web/backend/tests/api-collection/nrot/: decrypt.hurl  encrypt.hurl
src/caesars/web/backend/tests/api-collection/props/: local
src/caesars/web/backend/tests/health/: tests.rs
src/caesars/web/backend/tests/meta/: tests.rs
src/caesars/web/backend/tests/rot/: schema.rs  tests.rs
src/caesars/web/frontend/dioxus/: .gitignore  .prettierignore  Cargo.toml  Dioxus.toml  Trunk.toml  index.html  justfile  package.json  pnpm-lock.yaml  tailwind.config.js
src/caesars/web/frontend/dioxus/configs/: prettierignore
src/caesars/web/frontend/dioxus/public/: tailwind.css
src/caesars/web/frontend/dioxus/src/: main.rs
src/caesars/web/frontend/dioxus/src/components/: banner.rs  dashboard.rs  footer.rs  icons.rs
src/caesars/web/frontend/dioxus/src/rot/: graphql.rs  mod.rs
src/caesars/web/frontend/dioxus/styles/: main.css  main.scss
src/caesars/web/frontend/dioxus/styles/components/: main.scss
src/caesars/web/frontend/leptos/: .gitignore  Cargo.toml  Justfile  Trunk.toml  index.html  input.css  justfile  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
src/caesars/web/frontend/leptos/configs/: dprint.json  tailwind.config.js
src/caesars/web/frontend/leptos/src/: app.rs  main.rs
src/caesars/web/frontend/leptos/src/components/: banner.rs  dashboard.rs  footer.rs  icons.rs
src/caesars/web/frontend/leptos/src/rot/: graphql.rs  mod.rs
src/caesars/web/frontend/leptos/styles/base/: global.css
src/caesars/web/frontend/leptos/styles/components/: buttons.css
src/crabtail/: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  rustfmt.toml
src/crabtail/.builds/: ci.yml
src/crabtail/asset/sass/: main.scss
src/crabtail/asset/sass/base/: all.scss  global.scss
src/crabtail/asset/sass/components/: all.scss  buttons.scss
src/crabtail/configs/: postcss.config.js  prettier.config.js  prettierignore
src/crabtail/docs/: credits.md
src/crabtail/scripts/: postcss_rust_helpers.js
src/crabtail/src/: icon.rs  main.rs  text_area.rs  transform.rs
src/dsa/: .dprint.jsonc  .gitignore  LICENSE  README.md  justfile  noxfile.py  pylintrc  pyproject.toml
src/dsa/.builds/: ci.yml
src/dsa/scripts/: make
src/dsa/src/dsa/: __init__.py  __main__.py
src/dsa/src/dsa/treehouse/: test_search.py
src/dsa/src/treehouse/: test_search.py
src/grass/: .gitignore  CHANGELOG.md  LICENSE  README.md
src/hello/: .dockerignore  Cargo.toml  Dockerfile.1  Dockerfile.3  Dockerfile.6  Dockerfile.7
src/hello/src/: main.rs
src/keywords/: Makefile  README.md  justfile
src/learn-dsa/: .pre-commit-config.yaml  README.md  TODO.md
src/learn-scrapy/: README.md
src/pokedex-svelte/: CHANGELOG.md  Makefile  README.md  justfile  pnpm-lock.yaml  svelte.config.js  svelte.config.prod.js  tailwind.config.cjs
src/pokedex-sveltekit/: justfile  package.json  pnpm-lock.yaml  vite.config.js
src/pokedex-vue/: CHANGELOG.md  Makefile  README.md  components.d.ts  justfile  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.vitest.json  vite.config.ts
src/quiz-vue/: CHANGELOG.md  Makefile  README.md  components.d.ts  justfile  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/riddles/: .gitignore  README.md
src/rust-cicd/: Cargo.toml  Dockerfile.2  Dockerfile.4  Dockerfile.5
src/scrapy/: .gitignore  README.md
src/todos/cli-iroh/: .gitignore  Cargo.toml  justfile
src/todos/cli-iroh/src/: config.rs  error.rs  foo.rs  lib.rs  main.rs  todo.rs
src/todos/cli-iroh/tests/: integration.rs
src/todos/cli-sqlite/: .dprint.jsonc  Cargo.toml  justfile
src/todos/cli-sqlite/db/migrations/: 20240624135509_create_todo_table.sql
src/todos/cli-sqlite/src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  todo.rs
src/todos/cli/iroh/: .example.env  .gitignore  Cargo.toml  justfile
src/todos/cli/iroh/configs/: cliff.toml
src/todos/cli/iroh/data/: default-author  docs.redb  keypair
src/todos/cli/iroh/data/blobs/: blobs.db
src/todos/cli/iroh/src/: cli.rs  error.rs  main.rs  output.rs  todo.rs
(+519 files in other folders)
