[project]
name = "dsa"
version = "0.0.0"
description = "Add your description here"
authors = [
  { name = "Azzam S.A", email = "noreply@azzamsa.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"dsa" = "dsa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dsa"]
