[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
axum = "0.6.18"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
