[package]
name = "backend"
version = "0.1.1"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["web-programming"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["boilerplate"]
license = "MIT"
description = "nROT backend"

[dependencies]
# web server
axum = "0.6.20"
hyper = "0.14"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }

# GraphQL
async-graphql = { version = "6.0.7", features = ["uuid", "chrono"] }
async-graphql-axum = "6.0.7"

# Rest
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }

# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }

# Configurations
dotenv = "0.15.0"

# Misc
nrot = "2.0.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
frunk = "0.4.2"
frunk_core = { version = "0.4.2" }

[dev-dependencies]
anyhow = "1.0"
cynic = "3.3.0"
hyper = { version = "0.14.27", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
