[package]
name = "backend"
version = "0.1.1"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["web-programming"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["boilerplate"]
license = "MIT"
description = "nROT backend"
rust-version = "1.79.0"

[dependencies]
# web server
axum = "0.7.5"
hyper = "1.4"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }

# GraphQL
async-graphql = { version = "7.0.7", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0.7"

# Rest
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }

# Configurations
dotenv = "0.15.0"

# Misc
nrot = "2.0.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
frunk = "0.4.2"
frunk_core = { version = "0.4.2" }

[dev-dependencies]
anyhow = "1.0"
cynic = "3.7.3"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
