[package]
name = "frontend"
version = "1.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.3", features = ["serde", "csr"] }
leptos_meta = { version = "0.3", features = ["csr"] }
leptos_router = { version = "0.3", features = ["csr"] }

gloo-net = { version = "0.2", features = ["http"] }
log = "0.4"

# dependecies for client (enable when csr or hydrate set)
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1" }
wasm-bindgen = { version = "0.2" }

# backend communication
cynic = "2.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
